--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
                   , "passport": "0.1.16"
                   , "passport-local": "0.1.6"
                   , "gzippo": "0.2.0"
+                  , "connect-flash": "*"
                   }
 , "private": true
 , "engines": { "node" : ">0.8.0"}
